--- a/ProviderServices/ClinicalDocumentation.html
+++ b/ProviderServices/ClinicalDocumentation.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -204,50 +204,32 @@
                                     a free consultation</span>
                                 <div class="contact-form-style-01 mt-0">
                                     <a href="../Home/Contact.html"
-                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Send
-                                        message</a>
+                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Drop a message</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Cost, Quality, and Patient
-                                Satisfaction</h5>
-                            <p>
-                                Since the implementation of the Affordable Care Act, medical documentation has posed
-                                greater challenges than ever before. Providers must now ensure the medical necessity of
-                                services while also mitigating liability for medical negligence through smarter clinical
-                                documentation practices.
-                            </p>
-                            <p>
-                                Utilization Reviews under the trifecta of Accountable Care Organizations (ACO) - Cost,
-                                Quality, and Patient Satisfaction - present significant challenges for healthcare
-                                providers, regardless of their ACO status. We simplify this process through
-                                comprehensive onsite and offsite training, consultation, and support services tailored
-                                for all types of providers.
-                            </p>
-                            <p>Significant Areas in Prudent Clinical Documentation:</p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Cost, Quality, and Patient Experience</h5>
+<p>Since the implementation of the Affordable Care Act, medical documentation has become increasingly challenging. Providers must now ensure the medical necessity of services while simultaneously reducing liability for medical negligence through more efficient clinical documentation practices.</p>
 
-                            <ul>
-                                <li>
-                                    <span class="bi bi-check-lg text-green"></span>
-                                    <strong>Prepayment and Post-payment Audits:</strong> Focus on the appropriate use of
-                                    modifiers such as 25, 59, and 91. The introduction of new modifiers (XE, XS, XP, XU)
-                                    underlines the complexities of clinical documentation.
-                                </li>
+<p>Utilization Reviews within the trifecta of Accountable Care Organizations (ACO) – Cost, Quality, and Patient Satisfaction – present significant obstacles for healthcare providers, regardless of their ACO status. We simplify this process by offering comprehensive onsite and offsite training, consultation, and support services customized for all types of providers.</p>
 
-                                <li><span class="bi bi-check-lg text-green"></span> <strong>Compliance and Audit
-                                        Focus:</strong> Office of Inspector General (OIG) Programs ensure providers
-                                    adhere to National Correct Coding Initiative (NCCI) edits and avoid inappropriate
-                                    modifier usage.</li>
+<p>Key Focus Areas in Effective Clinical Documentation:</p>
 
-                                <li><span class="bi bi-check-lg text-green"></span> <strong>Evaluation and Management
-                                        (E/M) Coding:</strong> Expert Clinical Documentation Improvement (CDI)
-                                    specialists facilitate accurate E/M coding and determination of EM levels, ensuring
-                                    compliance and optimal reimbursement.</li>
-                            </ul>
-                            <p>Our team of certified specialists enhances provider capabilities in navigating these
-                                challenges, promoting compliance, and improving overall operational efficiency.</p>
+<ul>
+    <li>
+        <span class="bi bi-check-lg text-green"></span>
+        <strong>Prepayment and Post-payment Audits:</strong> Emphasis on the correct use of modifiers such as 25, 59, and 91. The introduction of new modifiers (XE, XS, XP, XU) adds complexity to clinical documentation.
+    </li>
+
+    <li><span class="bi bi-check-lg text-green"></span> <strong>Compliance and Audit Focus:</strong> Office of Inspector General (OIG) Programs ensure providers comply with National Correct Coding Initiative (NCCI) edits and avoid improper modifier usage.</li>
+
+    <li><span class="bi bi-check-lg text-green"></span> <strong>Evaluation and Management (E/M) Coding:</strong> Expert Clinical Documentation Improvement (CDI) specialists help facilitate accurate E/M coding and the proper determination of EM levels to ensure compliance and maximize reimbursement.</li>
+</ul>
+
+<p>Our team of certified specialists enhances provider capabilities in navigating these challenges, supporting compliance, and improving overall operational efficiency.</p>
+
                         </div>
                     </div>
                 </div>
