--- a/ProviderServices/HospitalBilling.html
+++ b/ProviderServices/HospitalBilling.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -204,40 +204,29 @@
                                     a free consultation</span>
                                 <div class="contact-form-style-01 mt-0">
                                     <a href="../Home/Contact.html"
-                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Send
-                                        message</a>
+                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Drop a message</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">UB-04, OPPS, APC, IPPS, DNFB,
-                                MCC, POA, and IMPACT</h5>
-                            <p>
-                                Dynamic IT Healthcare specializes in hospital billing using UB-04 (DRGs) and hospital outpatient
-                                billing under the Outpatient Prospective Payment System (OPPS) based on Ambulatory
-                                Payment Classifications (APC).
-                            </p>
-                            <p>
-                                Our team comprises trained, certified, and experienced coders who are ICD-10 certified
-                                and proficient in both the Inpatient Prospective Payment System (IPPS) and OPPS.
-                            </p>
-                            <p>
-                                We assist hospitals in reducing Discharged Not Final Billed (DNFB) days by providing
-                                comprehensive support in creating prudent clinical documentation concurrently during
-                                acute care treatment.
-                            </p>
-                            <p>
-                                Our services ensure compliant clinical documentation with a focus on Complication or
-                                Comorbidity (CC)/Major Complication or Comorbidity (MCC) and Present on Admission (POA)
-                                criteria. We collaborate closely with inpatient clinical providers to mitigate hospital
-                                readmissions, aligning with the goals of the Improving Medicare Post-Acute Care
-                                Transformation (IMPACT) Act of 2015.
-                            </p>
-                            <p>
-                                Dynamic IT Healthcare is committed to optimizing hospital billing processes, enhancing
-                                compliance, and improving financial outcomes for our healthcare partners.
-                            </p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Hospital Billing: UB-04, OPPS, APC, IPPS, DNFB, MCC, POA, and IMPACT</h5>
+<p>
+    Dynamic IT Healthcare specializes in hospital billing using the UB-04 (DRGs) for inpatient services and hospital outpatient billing under the Outpatient Prospective Payment System (OPPS), based on Ambulatory Payment Classifications (APC).
+</p>
+<p>
+    Our team includes trained, certified, and experienced coders who are ICD-10 certified and highly proficient in both the Inpatient Prospective Payment System (IPPS) and OPPS.
+</p>
+<p>
+    We help hospitals reduce Discharged Not Final Billed (DNFB) days by offering comprehensive support in generating accurate clinical documentation during acute care treatment.
+</p>
+<p>
+    Our services ensure compliant clinical documentation, focusing on Complication or Comorbidity (CC)/Major Complication or Comorbidity (MCC) and Present on Admission (POA) criteria. We work closely with inpatient clinical providers to minimize hospital readmissions, in line with the goals of the Improving Medicare Post-Acute Care Transformation (IMPACT) Act of 2015.
+</p>
+<p>
+    Dynamic IT Healthcare is dedicated to streamlining hospital billing processes, enhancing compliance, and improving financial outcomes for our healthcare partners.
+</p>
+
                         </div>
                     </div>
                 </div>
